research(loom-continuation-locality): enhance locality-aware execution backend with strict mode and artifact management